# raspi

./: .gitignore  .gitmodules  IMPROVEMENTS.md  README.md  codes_aircon  codes_aircon.bak  codes_aircon.bak1  codes_aircon.bak2  codes_aircon_test  decode.ipynb  dht_simpletest.py  gpio.py  html_test.py  jp.ipynb  main.py  main_return_onece.py  pyproject.toml  raspi_test.ipynb  remote_debug.py  remote_ir.py  settings.ini  settings.py  temp_humid.py  temp_humid.sql  test.py  test_heart.py  test_veiws.py
co2/: get_co2.py  test.py
controllers/: aircon_control_runner.py  aircon_stream.py  cooling_command_adapter.py  streamdata.py  two_stage_cooling_runner.py  webserver.py
doc/: BACKLOG.md  CONTROL_DESIGN.md  DECISIONS.md
irremote/: example.py  irremote_receve.py  irremote_transmit.py  pwm_test.py
models/: ac_signal_generator.py  ai_aircon_ctrl.py  base.py  data_collector.py  df_temp_humid.py  ssh_ctrl_remote_raspi.py  two_stage_cooling.py  two_stage_cooling_replay.py
pigpio/: codes  codes.bak1  ir_ctl.py
pigpios/: codes  codes.bak  codes.bak1  codes.bak2  codes_aircon  codes_aircon.bak  codes_aircon.bak1  codes_aircon.bak2  ir_ctl.py  ir_ctrl.py  ir_read.py  irrp_m.py  test.py
scripts/: replay_two_stage_cooling.py
tests/: test_aircon_control_runner.py  test_aircon_stream.py  test_cooling_command_adapter.py  test_db_lock_retry.py  test_two_stage_cooling.py  test_two_stage_cooling_replay.py  test_two_stage_cooling_runner.py
views/: jquery.html  test.html  views.py
