[tool.poetry]
name = "raspi"
version = "0.1.0"
description = ""
authors = ["TTT-Git <tsune33@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.3"
adafruit-circuitpython-dht = "^3.6.1"
paramiko = "^2.9.2"
scp = "^0.14.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
